--- a/src/app/admin/comidas/vista/vista.component.html
+++ b/src/app/admin/comidas/vista/vista.component.html
@@ -1,5 +1,5 @@
 <div>
   <p>{{comida.nombre}}</p>
-  <a (click) = 'nav(comida.nombre)'>Editar comida</a>
-  <button (click) = 'eliminar(comida.nombre)'>Eliminar comida</button>
+  <a (click) = 'nav(comida.id)'>Editar comida</a>
+  <button (click) = 'eliminar(comida.id)'>Eliminar comida</button>
 </div>
