--- a/src/app/cliente/compras/vista/vista.component.html
+++ b/src/app/cliente/compras/vista/vista.component.html
@@ -1,5 +1,5 @@
 <div>
-  <p>{{venta.nombreComida}}  {{venta.fecha}}</p>
+  <p>{{venta.comida.nombre}}  {{venta.fecha}}</p>
   <br>
   <p>{{venta.precio_total}}  {{venta.cantidad_productos}} </p>
   <br>
