se agrego seguridad

--- a/SPAComidas/src/app/admin/comidas/vista/vista.component.html
+++ b/SPAComidas/src/app/admin/comidas/vista/vista.component.html
@@ -1,5 +1,5 @@
 <div>
   <p>{{comida.nombre}}</p>
   <a (click) = 'nav(comida.id)'>Editar comida</a>
-  <button (click) = 'eliminar(comida.id)'>Eliminar comida</button>
+  <button (click) = 'eliminar(comida)'>Eliminar comida</button>
 </div>
