--- a/SPAComidas/src/app/cliente/tienda/listar-productos/listar-productos.component.html
+++ b/SPAComidas/src/app/cliente/tienda/listar-productos/listar-productos.component.html
@@ -1,5 +1,5 @@
 <div>
   <ol>
-    <li *ngFor="let comida of listaComidas" (click) = 'nav(comida.id)'>{{comida.nombre}}</li>
+    <li *ngFor="let comida of listaComidas" (click) = 'nav(comida.nombre)'>{{comida.nombre}}</li>
   </ol>
 </div>
