--- a/SPAComidas/src/app/cliente/tienda/vista-producto/vista-producto.component.html
+++ b/SPAComidas/src/app/cliente/tienda/vista-producto/vista-producto.component.html
@@ -1,6 +1,6 @@
 <div>
   <p>{{comida.nombre}}</p>
-  <form (ngSubmit)="comprar()">
+  <form (ngSubmit)="comprar(comida.nombre)">
     <input type="number" [(ngModel)]="cantidad_productos" name="cantidad_productos" value = "0">
     <br>
     <button type="submit" id="comprar">Comprar comida</button>
