--- a/SPAComidas/src/app/admin/comidas/vista/vista.component.html
+++ b/SPAComidas/src/app/admin/comidas/vista/vista.component.html
@@ -1,5 +1,7 @@
 <div>
   <p>{{comida.nombre}}</p>
-  <a (click) = 'nav(comida.id)'>Editar comida</a>
-  <button (click) = 'eliminar(comida.id)'>Eliminar comida</button>
+  <a class="btn btn-block ingresar  mx-sm-4" (click) = 'nav(comida.id)'>Editar comida</a>
+  <button class="btn btn-block ingresar  mx-sm-4" (click) = 'eliminar(comida.id)'>Eliminar comida</button>
 </div>
+
+
