--- a/SPAComidas/src/app/auth/login/login.component.html
+++ b/SPAComidas/src/app/auth/login/login.component.html
@@ -1,14 +1,30 @@
-<div>
-  <form (ngSubmit)="doLogin()">
-    <input  type="text" [(ngModel)]="user" name="user" placeholder="correo">
-    <br>
-    <input  type="password" [(ngModel)]="password" name="pass" placeholder="contraseña">
-    <br>
-    <div>
-      <a [routerLink] = "['/signup']">No tienes una cuenta? Registrate</a>
+<div class="container">
+  <div class="row justify-content-center pt-5 mt-5 mr-1">
+    <div class="col-md-4 formulario">
+      <form (ngSubmit)="doLogin()">
+        <div class="form-gorup text-center">
+          <h1>Iniciar Sesión</h1>
+        </div>
+        <div class="form-group mx-sm-4 pt-2">
+          <input class="form-control text-center" type="text" [(ngModel)]="user" name="user" placeholder="Ingrese Correo">
+
+        </div>
+        <div class="form-group mx-sm-4 pt-3">
+          <input class="form-control text-center" type="password" [(ngModel)]="password" name="pass"
+            placeholder="Ingrese Contraseña">
+        </div>
+        <div class="form-group mx-sm-4 pt-3 text-center">
+          <input type="submit" class=" btn btn-block ingresar  mx-sm-4" value="Ingresar" id="login">
+        </div>
+    
+        <br>
+        <div class="form-group mx-sm-4 pt-3 text-center">
+         <a>¿No tienes una cuenta?  </a><br>
+         <div class="form-group mx-sm-4 pt-3 text-center">
+          <a style="color:rgb(3, 107, 25)"   [routerLink]="['/signup']">Regístrate</a></div>
+        </div>
+        <br>
+      </form>
     </div>
-    <br>
-    <!-- Boton que acciona la funcion doLogin() -->
-    <button type="submit" id="login">Iniciar sesion</button>
-  </form>
+  </div>
 </div>
