--- a/SPAComidas/src/app/cliente/navbar-home/navbar-home.component.html
+++ b/SPAComidas/src/app/cliente/navbar-home/navbar-home.component.html
@@ -1,23 +1,34 @@
 <!-- Contenedor del navbar-home -->
-<div class="nav">
-  <div class="container">
-    <div class="row">
-
-      <div class="col-sm-1">
-        <img id="logo" src="../../../assets/logo.jpg">
-      </div>
-
-      <div class="col-sm-11 vcenter">
-        <ul class="menu">
-          <li><a [routerLink]="['/cliente/compras']">Compras</a></li>
-          <li><a [routerLink]="['/cliente/tienda']">Tienda</a></li>
-          <li><a (click)="logout()">Cerrar sesion</a></li>
+<!--  Nuevo nav-->
+<!doctype html>
+<html lang="en">
+<head>
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="D:\Carpeta_Windows\Downloads\Proyecto Desarrollo web\SPAComidas\src\styles.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital@0;1&display=swap" rel="stylesheet">
+<link href="https://unpkg.com/ionicons@5.4.0/dist/css/ionicons.min.css" rel="stylesheet">
+</head>
+<!-- Contenedor del navbar-home -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+      <a class="navbar-brand" href="#">
+      <img id="logo" src="../../../assets/logo2.png" style ="width:80px; height:50px">ComeVeg</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <i class="icon ion-md-menu"></i>
+      </button>
+    
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="ml-auto">
+          <li class="nav-link">
+            <a [routerLink]="['/cliente/compras']">Compras</a>
+          </li>
+          <li class="nav-link">
+            <a [routerLink]="['/cliente/tienda']">Tienda</a>
+          </li>
+          <li class="nav-link">
+            <a  (click)="logout()">Cerrar sesion</a>
+          </li>
         </ul>
       </div>
-
-    </div>
-  </div>
-
-
-
-</div>
+   </div>
+  </nav>
